--- a/leaderboard_challenge.html
+++ b/leaderboard_challenge.html
@@ -84,7 +84,7 @@
                 
                 <div class="flex flex-col items-center w-1/3 group cursor-pointer" v-if="sortedRunners[1]">
                     <div class="relative">
-                        <img :src="sortedRunners[1].avatar" class="w-16 h-16 rounded-full border-2 border-slate-300 shadow-[0_0_15px_rgba(203,213,225,0.3)] object-cover">
+                        <img :src="getAvatarUrl(sortedRunners[1].avatar)" class="w-16 h-16 rounded-full border-2 border-slate-300 shadow-[0_0_15px_rgba(203,213,225,0.3)] object-cover">
                         <div class="absolute -bottom-2 -right-1 bg-slate-300 text-slate-800 text-xs font-bold w-6 h-6 flex items-center justify-center rounded-full border border-slate-500">2</div>
                     </div>
                     <div class="glass-card mt-3 w-full p-2 rounded-t-lg text-center h-28 flex flex-col justify-end border-b-4 border-slate-400">
@@ -97,7 +97,7 @@
                     <div class="relative">
                         <div class="absolute inset-0 bg-yellow-500 rounded-full blur-md opacity-40 animate-pulse"></div>
                         <i class="fas fa-crown text-yellow-400 text-2xl absolute -top-8 left-1/2 transform -translate-x-1/2 animate-bounce-slow"></i>
-                        <img :src="sortedRunners[0].avatar" class="w-20 h-20 rounded-full border-2 border-yellow-400 shadow-[0_0_20px_rgba(250,204,21,0.4)] object-cover relative z-10">
+                        <img :src="getAvatarUrl(sortedRunners[0].avatar)" class="w-20 h-20 rounded-full border-2 border-yellow-400 shadow-[0_0_20px_rgba(250,204,21,0.4)] object-cover relative z-10">
                         <div class="absolute -bottom-2 -right-1 bg-yellow-400 text-yellow-900 text-sm font-bold w-7 h-7 flex items-center justify-center rounded-full border border-yellow-200 z-20">1</div>
                     </div>
                     <div class="glass-card mt-4 w-full p-3 rounded-t-lg text-center h-36 flex flex-col justify-end border-b-4 border-yellow-500 bg-gradient-to-t from-yellow-500/10 to-transparent">
@@ -112,7 +112,7 @@
 
                 <div class="flex flex-col items-center w-1/3 group cursor-pointer" v-if="sortedRunners[2]">
                     <div class="relative">
-                        <img :src="sortedRunners[2].avatar" class="w-16 h-16 rounded-full border-2 border-orange-700 shadow-[0_0_15px_rgba(194,65,12,0.3)] object-cover">
+                        <img :src="getAvatarUrl(sortedRunners[2].avatar)" class="w-16 h-16 rounded-full border-2 border-orange-700 shadow-[0_0_15px_rgba(194,65,12,0.3)] object-cover">
                         <div class="absolute -bottom-2 -right-1 bg-orange-700 text-orange-100 text-xs font-bold w-6 h-6 flex items-center justify-center rounded-full border border-orange-900">3</div>
                     </div>
                     <div class="glass-card mt-3 w-full p-2 rounded-t-lg text-center h-24 flex flex-col justify-end border-b-4 border-orange-800">
@@ -138,7 +138,7 @@
                     
                     <div class="flex-1 flex items-center gap-3 min-w-0 pl-2">
                         <div class="relative">
-                            <img :src="runner.avatar" class="w-10 h-10 rounded-full bg-slate-700 object-cover">
+                            <img :src="getAvatarUrl(runner.avatar)" class="w-10 h-10 rounded-full bg-slate-700 object-cover">
                             <div v-if="runner.qualified" class="absolute -bottom-1 -right-1 bg-green-500 text-white text-[8px] w-4 h-4 rounded-full flex items-center justify-center border border-slate-900">
                                 <i class="fas fa-check"></i>
                             </div>
@@ -185,6 +185,18 @@
         createApp({
             setup() {
                 const sortBy = ref('percentage');
+                const getAvatarUrl = (path) => {
+                    if (!path) return '/images/profile/17.jpg';
+                    if (path.indexOf('http') === 0) return path;
+                    const baseUrl = window.location.origin;
+                    const storageBase = baseUrl + '/storage';
+                    if (path.indexOf('storage/') === 0 || path.indexOf('/storage/') === 0) {
+                        const cleanPath = path.indexOf('/') === 0 ? path.substring(1) : path;
+                        return baseUrl + '/' + cleanPath;
+                    }
+                    const cleanPath = path.indexOf('/') === 0 ? path.substring(1) : path;
+                    return storageBase + '/' + cleanPath;
+                };
 
                 // Simulasi Data dari Database 'leaderboard_stats'
                 // Struktur disesuaikan dengan kolom: active_days, percentage, streak, qualified, old_pb, new_pb, gap, pace
@@ -272,7 +284,8 @@
 
                 return {
                     sortBy,
-                    sortedRunners
+                    sortedRunners,
+                    getAvatarUrl
                 }
             }
         }).mount('#app');
